# multimodal_rag

./: .dockerignore  .gitignore  Dockerfile  api.py  app.py  clean_text_functions.py  compose.yml  config.toml  embeddings.py  index.py  index_docs_as_images.py  index_docs_as_text.py  index_pdf_docs.py  llm_factory.py  load.py  pdf_docs_to_images.py  pyproject.toml  retriever.py  settings.py  utils.py  vector_store.py
documents/: __init__.py  document.py  ranked_document.py
embeddings/: __init__.py  embedding_factory.py  embedding_model.py  embeding_factory.py  fake_embeddings.py  hugging_face_embeddings.py
indexing/: index_utils.py  loader.py
rag_service/: chains.py  multi_source_retriever.py  rag.py  utils.py
scores/: general_rrf_scorer.py
utils/: async_utils.py  image_utils.py
vector_store/: common_collections.py  vector_store_factory.py
vector_store/qdrant/: collection_registry.py  collections.py  utils.py
