[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.16",
    "langchain-qdrant>=1.1.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pypdf>=6.10.2",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "unstructured>=0.22.21",
    "unstructured-inference>=1.6.6",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
    "sentence-transformers>=5.5.1",
    "pytesseract>=0.3.13",
    "unstructured-pytesseract>=0.3.15",
    "tokenizers>=0.22.2",
    "accelerate>=1.13.0",
    "torchvision>=0.27.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
